--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header id="caixa-header-main">
 
         <img id="logo-cubatão-prefeitura" src="pictures/logo-prefeitura/logo-01.png" alt="Prefeitura de Mongaguá">
-        <button type="button" id="bnt-encerrar" class="btn btn-success">Relatório geral</button>
+        <a href="validacao-usuario/controle-geral-login.html" target="_self"><button type="button" id="bnt-encerrar" class="btn btn-success">Relatório geral</button></a>
 
 
     </header>
@@ -31,8 +31,8 @@
 
             <div class="card-body">
                 <h5 class="card-title">Escola fernandes rodrigues</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+                <p class="card-text">Entre em atividade como professor para coordenar e administrar suas classes e series</p>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
             </div>
 
         </div>
@@ -45,7 +45,7 @@
             <div class="card-body">
                 <h5 class="card-title">Escola fernandes rodrigues</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
             </div>
 
         </div>
@@ -58,7 +58,7 @@
             <div class="card-body">
                 <h5 class="card-title">Escola fernandes rodrigues</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
             </div>
 
         </div>
@@ -71,21 +71,7 @@
             <div class="card-body">
                 <h5 class="card-title">Escola fernandes rodrigues</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
-            </div>
-
-        </div>
-
-
-
-        <div class="card">
-
-            <img src="pictures/pictures-escolas/escola-teste.jpg" alt="Escola tal">
-
-            <div class="card-body">
-                <h5 class="card-title">Escola fernandes rodrigues</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
             </div>
 
         </div>
@@ -99,20 +85,7 @@
             <div class="card-body">
                 <h5 class="card-title">Escola fernandes rodrigues</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
-            </div>
-
-        </div>
-
-
-        <div class="card">
-
-            <img src="pictures/pictures-escolas/escola-teste.jpg" alt="Escola tal">
-
-            <div class="card-body">
-                <h5 class="card-title">Escola fernandes rodrigues</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
             </div>
 
         </div>
@@ -126,7 +99,34 @@
             <div class="card-body">
                 <h5 class="card-title">Escola fernandes rodrigues</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
-                <a href="#" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+            </div>
+
+        </div>
+
+
+        <div class="card">
+
+            <img src="pictures/pictures-escolas/escola-teste.jpg" alt="Escola tal">
+
+            <div class="card-body">
+                <h5 class="card-title">Escola fernandes rodrigues</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
+            </div>
+
+        </div>
+
+
+
+        <div class="card">
+
+            <img src="pictures/pictures-escolas/escola-teste.jpg" alt="Escola tal">
+
+            <div class="card-body">
+                <h5 class="card-title">Escola fernandes rodrigues</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
+                <a href="validacao-usuario/valida-professor-login.html" target="_self" id = "link-card" class="btn btn-success">Entrar em atividade</a>
             </div>
 
         </div>
