--- a/validacao-usuario/controle-geral-login.html
+++ b/validacao-usuario/controle-geral-login.html
@@ -21,7 +21,7 @@
 
         <section id="formulario-section">
 
-            <h2>Acesso do diretor</h2>
+            <h2>Acesso geral do diretor</h2>
             <p id = "acesso-negado"></p>
 
             <form action="" method="POST">
@@ -35,7 +35,7 @@
 
         <section id="section-prefeitura-cubatao">
 
-            <img id="picture-logo-prefeitura" src="../pictures/logo-prefeitura/logo-01.png" alt="Logo de Cubatão">
+            <img id="picture-logo-prefeitura" src="../pictures/logo-prefeitura/logo-prefeitura-02.jpg" alt="Logo de Cubatão">
 
         </section>
 
