--- a/validacao-usuario/controle-geral-login.html
+++ b/validacao-usuario/controle-geral-login.html
@@ -21,7 +21,7 @@
 
         <section id="formulario-section">
 
-            <h2>Acesso geral do diretor</h2>
+            <h2>Acesso geral</h2>
             <p id = "acesso-negado"></p>
 
             <form action="" method="POST">
