--- a/validacao-usuario/valida-professor-login.html
+++ b/validacao-usuario/valida-professor-login.html
@@ -35,7 +35,7 @@
 
         <section id="section-prefeitura-cubatao">
 
-            <img id="picture-logo-prefeitura" src="../pictures/logo-prefeitura/logo-prefeitura-02.jpg" alt="Logo de Cubatão">
+            <img id="picture-logo-prefeitura" src="../pictures/logo-prefeitura/logo-01.png" alt="Logo de Cubatão">
 
         </section>
 
