--- a/atividades-escolares/atividades-escolares-all.html
+++ b/atividades-escolares/atividades-escolares-all.html
@@ -38,10 +38,9 @@
 
             <details>
                 <summary>Josebonificacil@gmal.com</summary>
-
-                <a class="links-header-mobile" href="#">Alunos</a>
-                <a class="links-header-mobile" href="#">Meu diário</a>
-                <a class="links-header-mobile" href="#">Sair</a>
+                    <a class="nav-header" href="#">Alunos</a>
+                    <a class="nav-header" href="#">Meu diário</a>
+                    <a class="nav-header" href="#">Sair da conta</a>
             </details>
 
         </div>
@@ -96,10 +95,10 @@
 
 
     <div id="mobile">
-        
-            <a class="nav-header" href="#">Alunos</a>
-            <a class="nav-header" href="#">Meu diário</a>
-            <a class="nav-header" href="#">Sair da conta</a>
+
+        <a class="links-header-mobile" href="#">Alunos</a>
+        <a class="links-header-mobile" href="#">Meu diário</a>
+        <a class="links-header-mobile" href="#">Sair</a>
      
     </div>
 
@@ -243,7 +242,7 @@
 
 
     <footer>
-        <p>Dúvidades de como navegar pelo atividades escolares? Clique <a id = "duvida-link" href = "#">Aqui</a></p>
+        <p>Dúvidas de como navegar pela atividades escolares? Clique <a id = "duvida-link" href = "#">Aqui</a></p>
     </footer>
 
 
