--- a/atividades-escolares/atividades-escolares-all.html
+++ b/atividades-escolares/atividades-escolares-all.html
@@ -87,7 +87,7 @@
 
         <section id="descrição-da-escola">
 
-            <h3>Escola bonifacil da almeida campos</h3>
+            <h3>Escola bonifacil da -  5 ano A</h3>
 
 
         </section>
@@ -98,7 +98,7 @@
 
         <a class="links-header-mobile" href="#">Meus alunos</a>
         <a class="links-header-mobile" href="#">Meu diário</a>
-        <a class="links-header-mobile" href="#">Sair da minha conta</a>
+        <a class="links-header-mobile" href="#">Encerrar sessão</a>
      
     </div>
 
