--- a/atividades-escolares/atividades-escolares-all.html
+++ b/atividades-escolares/atividades-escolares-all.html
@@ -87,7 +87,7 @@
 
         <section id="descrição-da-escola">
 
-            <h3>5 ano A</h3>
+            <h3>Escola Laffayete Rodrigues</h3>
 
 
         </section>
@@ -96,7 +96,6 @@
 
     <div id="mobile">
 
-        <a class="links-header-mobile" href="#">Meus alunos</a>
         <a class="links-header-mobile" href="#">Meu diário</a>
         <a class="links-header-mobile" href="#">Encerrar</a>
      
