--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <a href="interface-classes-series.html"> SERIES</a><br><br>
 
-    <a href="interface-ensino.html">GRAU DE ENSINO</a>
+    <a href="interface-ensino.html">GRAU DE ENSINO</a><br><br>
+    <a href="erros.html">erros</a>
     
     
 </body>
