--- a/interface-classes-series.html
+++ b/interface-classes-series.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/interface-classes-series-style/interface-classes-series-pc.css" media="all">
-    <link rel="stylesheet" href="../styles/interface-classes-series-style/interface-classes-ipad.css" media="screen">
-    <link rel="stylesheet" href="../styles/interface-classes-series-style/interface-classes-mobile.css" media="screen">
+    <link rel="stylesheet" href="styles/interface-classes-series-style/interface-classes-series-pc.css" media="all">
+    <link rel="stylesheet" href="styles/interface-classes-series-style/interface-classes-ipad.css" media="screen">
+    <link rel="stylesheet" href="styles/interface-classes-series-style/interface-classes-mobile.css" media="screen">
     <title>Series e classes - entrar em atividade</title>
 </head>
 
 <body>
 
     <header id="caixa-header-main">
-        <img id="logo-cubatão-prefeitura" src="../pictures/logo-prefeitura/logo-01.png" alt="Prefeitura de Mongaguá">
+        <img id="logo-cubatão-prefeitura" src="pictures/logo-prefeitura/logo-01.png" alt="Prefeitura de Mongaguá">
     </header>
 
     
@@ -35,7 +35,7 @@
 
             </div>
 
-            <img class="picture-classes" src="../pictures/pictures-all/imagem-sala-de-aula.jpg" alt="">
+            <img class="picture-classes" src="pictures/pictures-all/imagem-sala-de-aula.jpg" alt="">
 
         </div>
 
@@ -45,7 +45,7 @@
                 <div class="card-body">
                     <h5 class="card-title">1º ano C (Noite)</h5>
                     <p class="card-text">Coordene sua classe. Faltas, notas, acopompanhamentos e etc.</p>
-                    <a href="../atividades-escolares/atividades-escolares-all.html" target="_self" id = "link-entrar-atividades"  class="btn btn-success">Entrar em atividades</a>
+                    <a href="atividades-escolares/atividades-escolares-all.html" target="_self" id = "link-entrar-atividades"  class="btn btn-success">Entrar em atividades</a>
                 </div>
             </div>
 
