--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
             <div class="caixa-text">
                 <h2 id = "h2-title">Login</h2>
-                <h1 id = "h1-title">Helow, Friends!</h1>
-                <p  id = "p">Faça login em sua conta para coordernar, administrar e gerencias seus cuidadores.</p>
+                <h1 id = "h1-title">Hellow, Friends!</h1>
+                <p  id = "p">Faça login em sua conta para coordernar, administrar e gerenciar seus cuidadores.</p>
 
             </div>
 
@@ -31,7 +31,7 @@
                 <form id = "form-login" action="" autocomplete="off">
                     <input type="text" placeholder="E-mail" required>
                     <input type="password" name=""  placeholder="Password" required>
-                    <button id = "button-submit" type="submit">Enviar</button>
+                    <button id = "button-submit" type="submit">Login</button>
                 </form>
             </div>
 
