--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="caixa-text">
                 <h2 id = "h2-title">Login</h2>
-                <h1 id = "h1-title">Hellow, Friends!</h1>
+                <h1 id = "h1-title">Olá, cuidadores!</h1>
                 <p  id = "p">Faça login em sua conta para coordernar, administrar e gerenciar seus cuidadores.</p>
 
             </div>
