--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-    <link rel="stylesheet" href="login.css" media = "all"><!--- styles responsive------>
+    <link rel="stylesheet" href="index.css" media = "all"><!--- styles responsive------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200;300;400;500;600;700&display=swap"
@@ -32,10 +32,10 @@
         <div id="caixa-login">
 
 
-            <!---MENSAGENS DE ALERTA - formularios 
-            <div style="margin-bottom:2em" class="alert alert-danger" role="alert">
+            <!---MENSAGENS DE ALERTA - formularios --->
+            <div style="margin-bottom:2em" id = "aceso-negado" class="alert alert-danger" role="alert">
                 Acesso de login <strong>negado!</strong>
-            </div>-->
+            </div>
 
 
             <div id="caixa-center">
