--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </svg>
                     </button>
                     <a href="#" class="flex ml-2 md:mr-24">
-                        <img src="../imagens-geral/logo/logo-dr-olivato.png" class="h-8 mr-3" alt="FlowBite Logo" />
+                        <img src="imagens-geral/logo/logo-dr-olivato.png" class="h-8 mr-3" alt="FlowBite Logo" />
                         <!------- LOGO DA EMPRESA -->
 
                     </a>
