--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/style-index/index-ipad.css" media="screen">
     <link rel="stylesheet" href="styles/style-index/index-all.css" media="all">
+    <link rel="shortcut icon" href="img-all/favicon/favicon.ico" type="image/x-icon">
+
     <title>Cartão MAIS FAMÍLIA / consulta ao cliente</title>
 </head>
 
