--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 <body>
 
 
-
-
-
     <nav id="nav" class="bg-white dark:bg-gray-900  dark:border-gray-600">
         <div class="flex flex-wrap items-center justify-between max-w-screen-xl mx-auto p-4">
             <a href="#" class="flex items-center">
@@ -210,7 +207,7 @@
                                     <button type="submit" style="background-color: #2694BF;"
                                         class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Consultar</button>
                                     <div class="text-sm font-medium text-gray-500 dark:text-gray-300">
-                                        Está com dúvidas? <a href="#"
+                                        Está com dúvidas? <a href="https://wa.me/5513988081192?text=Ol%C3%A1%2C+estou+tendo+d%C3%BAvidas+de+como+consultar+o+associado.+Pode+me+ajudar.%3F" target="_blank"
                                             class="text-blue-700 hover:underline dark:text-blue-500"
                                             style="color:#2694BF;">Fale conosco aqui!</a>
                                     </div>
